# hermes-agent

./: pyproject.toml  run_agent.py
agent/: workspace.py
hermes_cli/: main.py  workspace.py
tests/: test_run_agent.py
tests/agent/: test_workspace.py
tests/tools/: test_workspace_tool.py
tools/: workspace_tool.py
