[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "A fork of NousResearch/hermes-agent — tool-calling agent powered by Hermes models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Nous Research" },
]

dependencies = [
  "openai>=1.30.0",
  "anthropic>=0.28.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "tenacity>=8.3.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-PyYAML",
  "ipython>=8.0.0",  # handy for interactive debugging
]
server = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
hermes-agent = "hermes_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# relaxing strict mode a bit — too noisy for personal tinkering
strict = false
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# added --tb=short so tracebacks aren't overwhelming when something breaks
# also added --no-header to reduce noise in output
# removed -x (stop on first failure) — prefer seeing all failures at once when exploring
# added -q on top of -v... wait no, they conflict. keeping -v for now, easier to scan
# added --durations=5 to see which tests are slow
# switched to --tb=long — short was cutting off too much context when debugging async stuff
# switched back to --tb=short, long is just too much noise in the terminal most of the time
addopts = "-v --tb=short --no-header --durations=5"
